--- a/example/app/config/routes.yaml
+++ b/example/app/config/routes.yaml
@@ -1,12 +1,7 @@
-#index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
-
-# the "app_lucky_number" route name is not important yet
 app_lucky_number:
     path: /lucky/number
-    controller: App\Controller\LuckyController::number
+    controller: App\Controller\Controller::randomNumber
 
 app_some_number:
-    path: /some/number
-    controller: App\Controller::some_int
+    path: /number
+    controller: App\Controller\Controller::constantNumber
