--- a/example/app/composer.json
+++ b/example/app/composer.json
@@ -4,7 +4,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": ">=7.2.5",
+        "php": "7.4",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "buildsecurity/symfony-opa": "dev-main",
@@ -19,7 +19,10 @@
         "preferred-install": {
             "*": "dist"
         },
-        "sort-packages": true
+        "sort-packages": true,
+        "platform": {
+            "php": "7.4"
+        }
     },
     "autoload": {
         "psr-4": {
