--- a/example/app/composer.json
+++ b/example/app/composer.json
@@ -7,7 +7,7 @@
         "php": "7.4",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "buildsecurity/symfony-opa": "dev-main",
+        "buildsecurity/symfony-opa": "7.4.*",
         "symfony/console": "5.2.*",
         "symfony/dotenv": "5.2.*",
         "symfony/flex": "^1.3.1",
