Fix README issues, add envars for all config options.

--- a/example/app/config/services.yaml
+++ b/example/app/config/services.yaml
@@ -34,7 +34,7 @@ services:
                 port: '%env(default:pdp.port:PDP_PORT)%'
                 hostname: '%env(default:pdp.hostname:PDP_HOSTNAME)%'
                 policy.path: '%env(default:pdp.policy.path:PDP_POLICY_PATH)%'
-                readTimeout.milliseconds: '%pdp.readTimeout.milliseconds%'
-                connectionTimeout.milliseconds: '%pdp.connectionTimeout.milliseconds%'
-                retry.maxAttempts: '%pdp.retry.maxAttempts%'
-                retry.backoff.milliseconds: '%pdp.retry.backoff.milliseconds%'
+                readTimeout.milliseconds: '%env(default:pdp.readTimeout.milliseconds:PDP_READ_TIMEOUT_MS)%'
+                connectionTimeout.milliseconds: '%env(default:pdp.connectionTimeout.milliseconds:PDP_CONNECTION_TIMEOUT_MS)%'
+                retry.maxAttempts: '%env(default:pdp.retry.maxAttempts:PDP_RETRY_MAX_ATTEMPTS)%'
+                retry.backoff.milliseconds: '%env(default:pdp.retry.backoff.milliseconds:PDP_RETRY_BACKOFF_MS)%'
