Update author email.

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "authors": [
         {
             "name": "Yash Tewari",
-            "email": "yashtewari1996@gmail.com"
+            "email": "yash@build.securty"
         }
     ],
     "require": {
