Tighter PDP endpoint construction. (#11)
* Tighter PDP endpoint construction.

Can now handle a larger variety of input from the configuration.

Example: PDP_HOSTNAME can be localhost, or http://localhost,
or http://localhost/ and so on.

* Wrap all exceptions with AccessDeniedHttpException.

In the flow of control when it is confirmed that a controller
has the Authorize decorator, then after that point any exception
that occurs should result in authz denial.

* Use `docker build` in example README.

Saves the user some time and complexity because they don't have
to install dependencies on their machine.

* Update author email.

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "authors": [
         {
             "name": "Yash Tewari",
-            "email": "yashtewari1996@gmail.com"
+            "email": "yash@build.securty"
         }
     ],
     "require": {
@@ -18,7 +18,8 @@
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.2.*",
         "symfony/http-client": "5.2.*",
-        "symfony/yaml": "5.2.*"
+        "symfony/yaml": "5.2.*",
+        "busybee/urljoin": "dev-main"
     },
     "autoload": {
         "psr-4": {
